<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_PermissivesToMainPLC" Id="{33b551de-ac76-4d02-b2de-ff3a244b71ff}">
    <Declaration><![CDATA[TYPE ST_PermissivesToMainPLC :
STRUCT
	ChargePermOK			: BOOL;
	ShootPermOK				: BOOL;
	
	AlldcPSUok				: BOOL;
	AllacInterlock_Closed	: BOOL;
	All_Coil_TemperatureOK	: BOOL;
	AllDumpResistorTempOK	: BOOL;
	NoGroundLoopCurrentDetected: BOOL;
	//AllFlybackDiodes_Alive	: BOOL;
	AllChargerEnabled		: BOOL;
	AnyCoilDisabled 		: BOOL;		
	SafetyOK				: BOOL;
	AllDumpRelayOpen		: BOOL;
	AllChargerRelay_Closed	: BOOL;
	AdminFaultBypassOn		: BOOL;
	// voltage feedback from CANbus to main plc
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>